# mocap_to_px4

./: LICENSE  README.md  package.xml  setup.py
launch/: mocap_launch.py
mocap_client/: CMakeLists.txt  package.xml
mocap_client/config/: params.yaml
mocap_client/include/: NatNetClientInterface.h  NatNetHandlerInterface.h
mocap_client/launch/: mocap.launch.py
mocap_client/src/: natnet_client.cpp  natnet_handler.cpp
mocap_interfaces/: CMakeLists.txt  package.xml
mocap_interfaces/msg/: RigidBodies.msg  RigidBody.msg
mocap_to_px4/: converter_member_function.py  package.xml  setup.cfg
mocap_to_px4/launch/: converter_launch.py
